# ai-employee

./: .gitignore  README.md  run_linkedin_watcher.bat
.claude/: settings.local.json
AI_Employee_Vault/: Company_Handbook.md.md  Dashboard.md  Dashboard.md.md  send_email.md
AI_Employee_Vault/.obsidian/: workspace.json
AI_Employee_Vault/Done/: test_fix.md  test_verify.md
AI_Employee_Vault/Inbox/: test1.md  test10.md  (+6 more)
uv_project/: brain_loop.py  claude-37fd-cwd  list_mcp_tools.py  manual_prompt.txt  pyproject.toml  requirements.txt  sender_loop.py  setup_auth.py  test_prompt.txt  test_skill.py  vault_worker.py  watcher.py  watcher_gmail.py  watcher_linkedin.py
uv_project/agent_skills/ai_skills/: __init__.py  draft_email.py  generate_x_post.py  plan_email.py  send_email_direct.py  send_email_mcp.py
uv_project/agent_skills/browser_skills/: post_to_x.py
uv_project/agent_skills/file_skills/: __init__.py  archive_processed.py  directory_ops.py  file_ops.py  move_file.py  parse_plan.py  process_file.py  read_md.py  search.py  write_md.py  write_vault.py
uv_project/agent_skills/math_skills/: __init__.py  calculator.py  statistics.py
uv_project/agent_skills/web_skills/: __init__.py  api_client.py  http_client.py  web_scraper.py
uv_project/examples/: file_example.py  math_example.py  web_example.py
uv_project/scripts/: activate.bat  activate.ps1  activate.sh  capture_linkedin_session.py  capture_x_session.py
uv_project/src/uv_skills/: __init__.py  main.py
uv_project/src/uv_skills_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+10 files in other folders)
